--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <div > 
          <h1>@hamzamamer_i</h1>
         <button><a href="https://www.instagram.com/hamzamamer_i/">Instagram</a></button>
-        <button><a href="#">Telegram</a></button>
-        <button><a href="#">Git-hub</a></button>
-        <button><a href="#">Lo-fi</a></button>
+        <button><a href="https://t.me/codesource2003">Telegram</a></button>
+        <button><a href="https://github.com/hamzamameri2003">Git-hub</a></button>
+        <button><a href="https://www.youtube.com/watch?v=5yx6BWlEVcY">Lo-fi</a></button>
     </div>
     </body>
 </html>
